# whoop-mcp-server

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/schemas/: __init__.py  cycle.py  recovery.py  sleep.py  user.py  workout.py
app/services/: whoop_client.py
app/tools/: cycles.py  recovery.py  sleep.py  user.py  workouts.py
app/utils/: __init__.py  timezone.py
config/: .env.example
scripts/: get_token.py
tests/: test_timezone.py  test_whoop_client.py
